@@ -1,3 +1,9 @@
+Sat Feb 06 11:19:18 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* xappy/query.py: Basic fixes to the Query.get_facet{,s} code.  No
+	  tests for this yet, since it's not actually hooked in to running
+	  tests.
+
 Fri Feb 05 09:34:08 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* xappy/doctests/searchconnection_doctest2.txt,
